Fix padding on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -136,7 +136,7 @@ pre {
     overflow-x: auto;
     padding: 0.4em 0.4em 0.4em $spacing-unit/2;
     @include media-query($on-palm) {
-        margin-left: 0.7em;
+        padding-left: 0.7em;
     }
 
     > code {
